<resources>
    <string name="app_name">Unique User</string>
    <string name="CheckUserLabel"></string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hide">Update mongodb</string>
    <string name="playername_text"></string>
    <string name="playername_label">Player\'s Name: </string>
    <string name="Getdistance">distance</string>
    <string name="title_activity_get_dist">GetDist</string>
    <string name="MyText2"></string>
    <string name="gamestatus_label">Game Status: </string>
    <string name="gamestatus_text"></string>
</resources>
